test/negative/constructor_arity3.mli.expected

*******************************
********** Parsed file ********
*******************************
type t =
  | L of t * t 
  | E 
val f : t -> int[@@gospel
                  {| r = f a
    ensures
      match a with
      | L E E -> r = 1
|}]
File "constructor_arity3.mli", line 7, characters 12-13:
Error: syntax error
